# ls-rs

./: .gitignore  Cargo.toml  Makefile
src/: command.rs  data_op.rs  error.rs  files.rs  json.rs  lib.rs  main.rs  printer.rs  term.rs  time.rs
tests/: clap_parsing_test.rs  data_processor_test.rs  file_system_entry_test.rs  json_test.rs  metadata_test.rs  terminal_size.rs
