[package]
name = "ls-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = "4.5.40"

[target.'cfg(unix)'.dependencies]
libc = "0.2.174"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["wincon", "consoleapi", "ntdef"] }

[dev-dependencies]
tempfile = "3.20.0"

[profile.release]
lto = true
strip = true
opt-level = 3

[profile.test]
test-threads = 1
