[package]
name = "ls-rs"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = "4.5.40"
thiserror = "2.0.12"

[target.'cfg(unix)'.dependencies]
libc = "0.2.174"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "wincon",
    "consoleapi",
    "processenv",
    "timezoneapi",
] }

[dev-dependencies]
serde_json = "1.0.140"
tempfile = "3.20.0"

[profile.release]
lto = true
strip = true
opt-level = 3
debug = false
panic = 'abort'

[profile.dev]
opt-level = 0
debug = true
